Finished styling for small screens where noticable overlap starts becoming a problem. Still needs fix for slight overlap of dice controls over the toTop button on small screens in landscape mode. Does not impede use, however. Finished implementing onclick onto the toggle to enable autoplays. Uses workaround wrapper div to hold/handle the onclick for the toggle. Bootstrap4-toggle does not move the inline onclick attribute to the newly generated content.

--- a/styles/site.css
+++ b/styles/site.css
@@ -42,6 +42,7 @@ address {
 .navBar {
     top: 10px;
     background-color: #bbbbbb;
+	margin-bottom: 1em;
 }
 
 .navBarBtn {
@@ -82,7 +83,6 @@ address {
 
 /* Controls */
 .controlBarLeft {	
-	margin-top: 1em;
     float: left;
     position: fixed;    
 }
@@ -106,6 +106,11 @@ address {
 
 .btn-group-vertical > .btn-group:not(:first-child), .btn-group-vertical > .btn:not(:first-child) {
     margin-top: 0px;
+}
+
+.toggle.noRadius {
+/* Override on border radius for toggle in controls. */
+	border-radius: inherit;
 }
 
 /* Controls: unused */
